Fix chat roll card for rolls without outcome text (e.g., feat rollFormula).

--- a/templates/chat/roll-result-card.hbs
+++ b/templates/chat/roll-result-card.hbs
@@ -26,9 +26,11 @@
         </div>
       {{/if}}
       {{#each outcomeLines}}
-        <div class="outcome-row">
-          <span>{{this}}</span>
-        </div>
+        {{#if this}}        
+          <div class="outcome-row">
+            <span>{{this}}</span>
+          </div>
+        {{/if}}
       {{/each}}
     </div>
   {{/each}}
