--- a/scss/morkborg.scss
+++ b/scss/morkborg.scss
@@ -1,4 +1,5 @@
 @import "morkborg/_root";
+@import "morkborg/_fonts";
 @import "morkborg/_flex";
 @import "morkborg/_morkborg";
 @import "morkborg/_sheet";
