--- a/scss/morkborg/_root.scss
+++ b/scss/morkborg/_root.scss
@@ -1,5 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Alegreya&family=Lato&family=Oswald&family=Rakkas&family=Special+Elite&display=swap");
-
 :root {
   --background-color: #000000;
   --foreground-color: #ffffff;
@@ -17,28 +15,7 @@
   --h2-font: "FetteTrumpDeutsch";
   --h3-font: "Old Cupboard";
   --item-font: "Special Elite";
+  --journal-font: "Inconsolatazi4varl_qu";
+  --journal-font-size: 15px;
   --window-border-color: #222222;
-}
-
-/* ====================== */
-/* Fonts */
-/* ====================== */
-@font-face {
-  font-family: "Blood Crow";
-  src: url("../fonts/bloodcrow.ttf") format("truetype");
-}
-
-@font-face {
-  font-family: "Calling Code Regular";
-  src: url("../fonts/CallingCode-Regular.ttf") format("truetype");
-}
-
-@font-face {
-  font-family: "FetteTrumpDeutsch";
-  src: url("../fonts/FetteTrumpDeutsch.ttf") format("truetype");
-}
-
-@font-face {
-  font-family: "Old Cupboard";
-  src: url("../fonts/OldCupboard.otf") format("opentype");
 }
