--- a/scss/skins/mb/content.min.scss
+++ b/scss/skins/mb/content.min.scss
@@ -166,8 +166,8 @@ pre[class*="language-"] {
 .mce-content-body {
   background-color: #222;
   color: white;
-  font-family: "Special Elite";
-  font-size: 14px;
+  font-family: "Inconsolatazi4varl_qu";
+  font-size: 15px;
   overflow-wrap: break-word;
   word-wrap: break-word;
 }
@@ -722,7 +722,8 @@ table[style*="border-width: 0px"] th {
   content: "-";
 }
 body {
-  font-family: "Special Elite";
+  font-family: "Inconsolatazi4varl_qu";
+  font-size: 15px;
 }
 table {
   border-collapse: collapse;
