--- a/scss/skins/mb/skin.min.scss
+++ b/scss/skins/mb/skin.min.scss
@@ -8,8 +8,8 @@
   box-sizing: content-box;
   color: #000;
   cursor: auto;
-  font-family: "Special Elite";
-  font-size: 16px;
+  font-family: "Inconsolatazi4varl_qu";
+  font-size: 15px;
   font-style: normal;
   font-weight: 400;
   line-height: normal;
@@ -65,7 +65,7 @@
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
-  font-family: "Special Elite";
+  font-family: "Inconsolatazi4varl_qu";
   overflow: hidden;
   position: relative;
   visibility: inherit !important;
@@ -80,7 +80,7 @@
   box-shadow: none;
 }
 .tox-tinymce-aux {
-  font-family: "Special Elite";
+  font-family: "Inconsolatazi4varl_qu";
   z-index: 1300;
 }
 .tox-tinymce :focus,
@@ -293,8 +293,8 @@ button::-moz-focus-inner {
   color: #000;
   cursor: pointer;
   display: inline-block;
-  font-family: "Special Elite";
-  font-size: 14px;
+  font-family: "Inconsolatazi4varl_qu";
+  font-size: 15px;
   font-style: normal;
   font-weight: 700;
   letter-spacing: normal;
@@ -401,8 +401,8 @@ button::-moz-focus-inner {
   box-sizing: border-box;
   cursor: pointer;
   display: inline-block;
-  font-family: "Special Elite";
-  font-size: 16px;
+  font-family: "Inconsolatazi4varl_qu";
+  font-size: 15px;
   font-weight: 400;
   line-height: 1.3;
   margin: 0;
@@ -1323,7 +1323,7 @@ button::-moz-focus-inner {
   margin-left: auto;
 }
 .tox .tox-dialog__title {
-  font-family: "Special Elite";
+  font-family: "Inconsolatazi4varl_qu";
   font-size: 20px;
   font-style: normal;
   font-weight: 400;
@@ -1902,8 +1902,8 @@ body.tox-dialog__disable-scroll {
   box-shadow: none;
   box-sizing: border-box;
   color: #fff;
-  font-family: "Special Elite";
-  font-size: 16px;
+  font-family: "Inconsolatazi4varl_qu";
+  font-size: 15px;
   line-height: 24px;
   margin: 0;
   min-height: 34px;
@@ -2002,8 +2002,8 @@ body.tox-dialog__disable-scroll {
   box-shadow: none;
   box-sizing: border-box;
   color: #fff;
-  font-family: "Special Elite";
-  font-size: 16px;
+  font-family: "Inconsolatazi4varl_qu";
+  font-size: 15px;
   line-height: 24px;
   margin: 0;
   min-height: 34px;
