--- a/scss/morkborg/_root.scss
+++ b/scss/morkborg/_root.scss
@@ -15,7 +15,8 @@
   --h2-font: "FetteTrumpDeutsch";
   --h3-font: "Old Cupboard";
   --item-font: "Special Elite";
-  --journal-font: "Inconsolatazi4varl_qu";
-  --journal-font-size: 15px;
+  /*  --journal-font: "Inconsolatazi4varl_qu"; */
+  --journal-font: "Alegreya";
+  --journal-font-size: 18px;
   --window-border-color: #222222;
 }
