--- a/templates/actor/character/obituary-tab.hbs
+++ b/templates/actor/character/obituary-tab.hbs
@@ -1,5 +1,5 @@
 {{!-- Obituary Tab --}}
 <div class="tab class-tab" data-group="primary" data-tab="obituary">
   {{editor data.system.description target="system.description" button=true
-  owner=owner editable=true}}
+  owner=owner editable=true engine="prosemirror"}}
 </div>
