--- a/templates/common/description-tab.hbs
+++ b/templates/common/description-tab.hbs
@@ -1,4 +1,4 @@
 <div class="tab" data-group="primary" data-tab="description">
   {{editor data.system.description target="system.description" button=true
-  owner=owner editable=true}}
+  owner=owner editable=true engine="prosemirror"}}
 </div>
