--- a/scss/morkborg/_fonts.scss
+++ b/scss/morkborg/_fonts.scss
@@ -13,7 +13,14 @@
 
 @font-face {
   font-family: "Inconsolatazi4varl_qu";
-  src: url("../assets/fonts/Inconsolatazi4varl_qu.otf") format("opentype");
+  src: url("../assets/fonts/Inconsolatazi4varl_qu-Regular.otf")
+    format("opentype");
+  font-weight: normal;
+}
+
+@font-face {
+  font-family: "Benjamin Franklin";
+  src: url("../assets/fonts/BenjaminFranklin.ttf") format("truetype");
   font-weight: normal;
 }
 
