--- a/scss/morkborg/_foundry-overrides.scss
+++ b/scss/morkborg/_foundry-overrides.scss
@@ -536,8 +536,10 @@ select:focus {
       text-transform: uppercase;
     }
     h3 {
+      font-family: "Inconsolata";
       font-weight: bold;
       font-size: 20px;
+      text-transform: uppercase;
     }
 
     .journal-sidebar {
@@ -586,8 +588,6 @@ select:focus {
         background-color: var(--background-color);
         border: 1px solid var(--foreground-color);
         color: var(--foreground-color);
-        li {
-        }
         li:hover {
           background-color: var(--foreground-color);
           color: var(--background-color);
@@ -613,8 +613,10 @@ select:focus {
     text-transform: uppercase;
   }
   h3 {
+    font-family: "Inconsolata";
     font-weight: bold;
     font-size: 20px;
+    text-transform: uppercase;
   }
 }
 
