Character sheet displaying correctly

--- a/templates/actor/character/sheet-header.hbs
+++ b/templates/actor/character/sheet-header.hbs
@@ -135,7 +135,8 @@
         data-dtype="Number"
         size="3"
       />
-      <span class="ability-label rollable strength">TeeHee</span>
+      <span class="ability-label rollable strength">{{ abbreviate this.label}}</span>
+    </div>
     {{/each}}
     {{!-- <div class="ability-row">
       <input
