--- a/scss/morkborg/_foundry-overrides.scss
+++ b/scss/morkborg/_foundry-overrides.scss
@@ -528,6 +528,7 @@ select:focus {
       color: var(--highlight-foreground-color) !important;
       font-family: var(--h2-font);
       font-size: 28px;
+      text-align: center;
     }
     h2 {
       border-bottom: none;
@@ -605,6 +606,7 @@ select:focus {
     color: var(--highlight-foreground-color) !important;
     font-family: var(--h2-font);
     font-size: 28px;
+    text-align: center;
   }
   h2 {
     border-bottom: none;
