--- a/templates/actor/character/sheet-header.hbs
+++ b/templates/actor/character/sheet-header.hbs
@@ -130,57 +130,13 @@
       <input
         class="ability-input"
         type="text"
-        name="this.value"
+        name="{{createName this.label}}"
         value="{{numberFormat this.value decimals=0 sign=true}}"
         data-dtype="Number"
         size="3"
       />
-      <span class="ability-label rollable strength">{{ abbreviate this.label}}</span>
+      <span class="ability-label rollable {{abilityLabelClass this}}">{{ abbreviate this.label}}</span>
     </div>
     {{/each}}
-    {{!-- <div class="ability-row">
-      <input
-        class="ability-input"
-        type="text"
-        name="system.abilities.strength.value"
-        value="{{numberFormat data.system.abilities.strength.value decimals=0 sign=true}}"
-        data-dtype="Number"
-        size="3"
-      />
-      <span class="ability-label rollable strength">{{ localize 'MB.AbilityStrengthAbbrev' }}</span>
-    </div>
-    <div class="ability-row">
-      <input
-        class="ability-input"
-        type="text"
-        name="system.abilities.agility.value"
-        value="{{numberFormat data.system.abilities.agility.value decimals=0 sign=true}}"
-        data-dtype="Number"
-        size="3"
-      />
-      <span class="ability-label rollable agility">{{ localize 'MB.AbilityAgilityAbbrev' }}</span>
-    </div>
-    <div class="ability-row">
-      <input
-        class="ability-input"
-        type="text"
-        name="system.abilities.presence.value"
-        value="{{numberFormat data.system.abilities.presence.value decimals=0 sign=true}}"
-        data-dtype="Number"
-        size="3"
-      />
-      <span class="ability-label rollable presence">{{ localize 'MB.AbilityPresenceAbbrev' }}</span>
-    </div>
-    <div class="ability-row">
-      <input
-        class="ability-input"
-        type="text"
-        name="system.abilities.toughness.value"
-        value="{{numberFormat data.system.abilities.toughness.value decimals=0 sign=true}}"
-        data-dtype="Number"
-        size="3"
-      />
-      <span class="ability-label rollable toughness">{{ localize 'MB.AbilityToughnessAbbrev' }}</span>
-    </div> --}}
   </div>
 </header>
