--- a/templates/actor/character/sheet-header.hbs
+++ b/templates/actor/character/sheet-header.hbs
@@ -130,7 +130,7 @@
       <input
         class="ability-input"
         type="text"
-        name="{{createName this.label}}"
+        name="{{inputName this.label}}"
         value="{{numberFormat this.value decimals=0 sign=true}}"
         data-dtype="Number"
         size="3"
