--- a/scss/morkborg/_sheet.scss
+++ b/scss/morkborg/_sheet.scss
@@ -1,132 +1,131 @@
-.morkborg {
-  &.sheet {
-    .window-content {
-      overflow-y: hidden;
-      padding: 5px;
+.morkborg.sheet.actor,
+.morkborg.sheet.item {
+  margin-top: 0;
 
-      /* inherited background is parchment img bg */
-      background: var(--window-background);
-      font-size: 13px;
+  .window-content {
+    overflow-y: hidden;
+    padding: 5px;
+
+    /* inherited background is parchment img bg */
+    background: var(--window-background);
+    font-size: 13px;
+    color: var(--foreground-color);
+    border-bottom: 1px solid var(--window-border-color);
+    border-left: 1px solid var(--window-border-color);
+    border-right: 1px solid var(--window-border-color);
+
+    form {
+      height: 100%;
+      overflow: hidden;
+    }
+  }
+
+  .editable .rollable:hover {
+    color: var(--highlight-foreground-color);
+    text-shadow: 0 0 10px var(--highlight-background-color);
+    cursor: pointer;
+  }
+
+  input {
+    &[type="text"],
+    &[type="number"],
+    &[type="password"],
+    &[type="date"] {
       color: var(--foreground-color);
-      border-bottom: 1px solid var(--window-border-color);
-      border-left: 1px solid var(--window-border-color);
-      border-right: 1px solid var(--window-border-color);
-
-      form {
-        height: 100%;
-        overflow: hidden;
-      }
+      border-radius: 0;
     }
 
-    margin-top: 0;
-
-    .editable .rollable:hover {
-      color: var(--highlight-foreground-color);
-      text-shadow: 0 0 10px var(--highlight-background-color);
-      cursor: pointer;
+    &[type="text"]:focus,
+    &[type="number"]:focus,
+    &[type="password"]:focus,
+    &[type="date"]:focus,
+    &[type="time"]:focus,
+    &[type="text"]:hover,
+    &[type="number"]:hover,
+    &[type="password"]:hover,
+    &[type="date"]:hover,
+    &[type="time"]:hover {
+      box-shadow: 0 0 5px var(--highlight-background-color);
     }
+  }
 
-    input {
-      &[type="text"],
-      &[type="number"],
-      &[type="password"],
-      &[type="date"] {
-        color: var(--foreground-color);
-        border-radius: 0;
-      }
+  select:focus {
+    box-shadow: 0 0 5px var(--highlight-background-color);
+  }
 
-      &[type="text"]:focus,
-      &[type="number"]:focus,
-      &[type="password"]:focus,
-      &[type="date"]:focus,
-      &[type="time"]:focus,
-      &[type="text"]:hover,
-      &[type="number"]:hover,
-      &[type="password"]:hover,
-      &[type="date"]:hover,
-      &[type="time"]:hover {
-        box-shadow: 0 0 5px var(--highlight-background-color);
-      }
+  button {
+    &:hover,
+    &:focus {
+      box-shadow: 0 0 5px var(--highlight-background-color);
     }
+  }
 
-    select:focus {
+  a:hover {
+    text-shadow: 0 0 8px var(--highlight-background-color);
+  }
+
+  textarea {
+    border: 1px solid #7a7971;
+    border-radius: 0;
+    color: var(--foreground-color);
+    font-family: var(--journal-font);
+    font-size: 14px;
+    resize: none;
+
+    &:hover {
       box-shadow: 0 0 5px var(--highlight-background-color);
     }
 
-    button {
-      &:hover,
-      &:focus {
-        box-shadow: 0 0 5px var(--highlight-background-color);
-      }
+    &:focus {
+      box-shadow: 0 0 5px var(--highlight-background-color);
+      outline: none;
     }
+  }
 
-    a:hover {
-      text-shadow: 0 0 8px var(--highlight-background-color);
-    }
+  .profile-img {
+    border: none;
+  }
 
-    textarea {
-      border: 1px solid #7a7971;
-      border-radius: 0;
-      color: var(--foreground-color);
-      font-family: var(--journal-font);
-      font-size: 14px;
-      resize: none;
+  .editor {
+    border: 1px solid #7a7971;
+    color: var(--foreground-color);
+    font-family: var(--journal-font);
+    font-size: var(--journal-font-size);
+    padding: 0 8px;
+  }
+
+  .tox.tox-tinymce .tox-edit-area__iframe {
+    background: var(--background-color);
+  }
+
+  .sheet-tabs {
+    flex: 0 0 30px;
+    margin-bottom: 5px;
+
+    /* font-family: "Modesto Condensed", "Palatino Linotype", serif; */
+    font-size: 20px;
+    font-weight: 700;
+
+    /* TODO: track down the border-top and border-bottom getting inherited on these */
+    border-top: none;
+    border-bottom: none;
+
+    .item {
+      font-family: var(--h2-font);
+      font-size: 22px;
+      height: 30px;
+      padding: 0;
+      width: 120px;
 
       &:hover {
-        box-shadow: 0 0 5px var(--highlight-background-color);
+        color: var(--highlight-foreground-color);
+        text-shadow: 0 0 10px var(--highlight-background-color);
       }
 
-      &:focus {
-        box-shadow: 0 0 5px var(--highlight-background-color);
-        outline: none;
-      }
-    }
-
-    .profile-img {
-      border: none;
-    }
-
-    .editor {
-      border: 1px solid #7a7971;
-      color: var(--foreground-color);
-      font-family: var(--journal-font);
-      font-size: var(--journal-font-size);
-      padding: 0 8px;
-    }
-
-    .tox.tox-tinymce .tox-edit-area__iframe {
-      background: var(--background-color);
-    }
-
-    .sheet-tabs {
-      flex: 0 0 30px;
-      margin-bottom: 5px;
-
-      /* font-family: "Modesto Condensed", "Palatino Linotype", serif; */
-      font-size: 20px;
-      font-weight: 700;
-
-      /* TODO: track down the border-top and border-bottom getting inherited on these */
-      border-top: none;
-      border-bottom: none;
-
-      .item {
-        font-family: var(--h2-font);
-        font-size: 22px;
-        height: 30px;
-        padding: 0;
-        width: 120px;
-
-        &:hover {
-          color: var(--highlight-foreground-color);
-          text-shadow: 0 0 10px var(--highlight-background-color);
-        }
-
-        &.active {
-          background-color: var(--highlight-background-color);
-          color: var(--highlight-foreground-color);
-          text-shadow: none;
-        }
+      &.active {
+        background-color: var(--highlight-background-color);
+        color: var(--highlight-foreground-color);
+        text-shadow: none;
       }
     }
   }
@@ -138,10 +137,8 @@
       height: 100%;
       overflow-y: auto;
     }
-  }
 
-  &.sheet {
-    .sheet-body .form-group {
+    .form-group {
       margin-bottom: 8px;
 
       label {
